force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/Mutually_Agreed_to_Objectives__c.object-meta.xml
<CustomObject>
    <description>M20</description>
    <label>Mutually Agreed to Objectives</label>
    <nameField>
        <label>Mutually Agreed to Objectives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mutually Agreed to Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>