force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Actual_Substantive_Visits_for_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Substantive_Visits_for_Month__c</fullName>
    <label>Actual Substantive Visits for Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>