force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Actual_Visits_with_Current_Clients__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visits_with_Current_Clients__c</fullName>
    <label>Actual # Visits with Current Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>