force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Annual_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Sales Plan</label>
    <referenceTo>Annual_Sales_Plan__c</referenceTo>
    <relationshipLabel>Mutually Agreed to Objectives</relationshipLabel>
    <relationshipName>Mutually_Agreed_to_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>