force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>RAE Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>