force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Expected_Contract_1__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expected Contract 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mutually Agreed to Objectives (Expected Contract 1)</relationshipLabel>
    <relationshipName>Mutually_Agreed_to_Objectives3</relationshipName>
    <type>Lookup</type>
</CustomField>