force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Expected_Contract_1_Recv_d_Closed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_1_Recv_d_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expected Contract 1 Recv&#39;d/Closed?</label>
    <type>Checkbox</type>
</CustomField>