force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Expected_Contract_2__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expected Contract 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mutually Agreed to Objectives (Expected Contract 2)</relationshipLabel>
    <relationshipName>Mutually_Agreed_to_Objectives5</relationshipName>
    <type>Lookup</type>
</CustomField>