force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Expected_Contract_3__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expected Contract 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mutually Agreed to Objectives (Expected Contract 3)</relationshipLabel>
    <relationshipName>Mutually_Agreed_to_Objectives4</relationshipName>
    <type>Lookup</type>
</CustomField>