force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Is_Current_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Running_User__c</fullName>
    <formula>IF(Regional_Manager__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>