force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Month_End_Comments__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Comments__c</fullName>
    <label>Manager&#39;s Month End Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>