force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Number_of_Contracts_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contracts_Received__c</fullName>
    <label>Number of Contracts Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>