force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Number_of_Expected_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expected_Contracts__c</fullName>
    <label>Number of Expected Contracts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>