force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Number_of_visits_with_current_clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_visits_with_current_clients__c</fullName>
    <label>Expected # Visits with Current Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>