force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/objective_plan_date__c.field-meta.xml
<CustomField>
    <fullName>objective_plan_date__c</fullName>
    <description>Please put in the Date of mutually agreed to objective plan</description>
    <label>Objective Plan Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>