force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Regional_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Regional_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RAE Name</description>
    <label>Regional Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mutually_Agreed_to_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>