force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mutually_Agreed_to_Objectives1</relationshipName>
    <type>Lookup</type>
</CustomField>