force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Secondary_Visits_Score__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Visits_Score__c</fullName>
    <label>Substantive Call/Booth Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>