force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Substantive_Visits_Score__c.field-meta.xml
<CustomField>
    <fullName>Substantive_Visits_Score__c</fullName>
    <label>On-Campus/Online Meeting Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>