force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Targeted_Substantive_Visits_for_Month__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Substantive_Visits_for_Month__c</fullName>
    <description>Please put in the target number of substantive visits</description>
    <label>Targeted Substantive Visits for Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>