force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Top_Targeted_School_Count__c.field-meta.xml
<CustomField>
    <fullName>Top_Targeted_School_Count__c</fullName>
    <label>Top Targeted School Count</label>
    <summaryForeignKey>Top_Targeted_School__c.Mutually_Agreed_to_Objectives__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>