force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Total_Visits_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits_Score__c</fullName>
    <formula>Substantive_Visits_Score__c  +  Secondary_Visits_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Visits Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>