force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/fields/Visits_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Visits_Remaining__c</fullName>
    <description># of visits remaining against target</description>
    <formula>if((Targeted_Substantive_Visits_for_Month__c - Actual_Substantive_Visits_for_Month__c) &lt;= 0, 0, (Targeted_Substantive_Visits_for_Month__c -  Actual_Substantive_Visits_for_Month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of visits remaining against target</inlineHelpText>
    <label>Visits Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>