force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/recordTypes/M2O.recordType-meta.xml
<RecordType>
    <fullName>M2O</fullName>
    <active>true</active>
    <description>Mutually Agreed to Objectives</description>
    <label>M2O</label>
</RecordType>