force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Regional_Account_Executive__c</columns>
    <columns>Regional_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2014</value>
    </filters>
    <label>All - 2014</label>
</ListView>