force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/listViews/Main_View.listView-meta.xml
<ListView>
    <fullName>Main_View</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Annual_Sales_Plan__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Regional_Account_Executive__c</columns>
    <columns>objective_plan_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regional_Manager__c</field>
        <operation>equals</operation>
        <value>Julie Esau</value>
    </filters>
    <filters>
        <field>Regional_Account_Executive__c</field>
        <operation>contains</operation>
        <value>darcy esau</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2016 12:00 AM</value>
    </filters>
    <label>Julie&#39;s View</label>
</ListView>