force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/listViews/Mike_s_View.listView-meta.xml
<ListView>
    <fullName>Mike_s_View</fullName>
    <columns>NAME</columns>
    <columns>Annual_Sales_Plan__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Regional_Account_Executive__c</columns>
    <columns>objective_plan_date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regional_Manager__c</field>
        <operation>contains</operation>
        <value>Michael Friedman</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2016 12:00 AM</value>
    </filters>
    <label>Mike&#39;s View</label>
    <sharedTo>
        <group>BD_East</group>
        <group>BD_West</group>
    </sharedTo>
</ListView>