force-app/main/default/objects/Mutually_Agreed_to_Objectives__c/listViews/My_Mutually_Agreed_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Mutually_Agreed_Objectives</fullName>
    <columns>Annual_Sales_Plan__c</columns>
    <columns>NAME</columns>
    <columns>objective_plan_date__c</columns>
    <columns>Targeted_Substantive_Visits_for_Month__c</columns>
    <columns>Actual_Substantive_Visits_for_Month__c</columns>
    <columns>Number_of_Expected_Contracts__c</columns>
    <columns>Number_of_Contracts_Received__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>objective_plan_date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <label>My Mutually Agreed Objectives</label>
</ListView>